--- a/angular.json
+++ b/angular.json
@@ -94,13 +94,14 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
-              "node_modules/swiper/swiper-bundle.min.css"
+              "node_modules/swiper/swiper-bundle.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/styles.css"
             ],
             "scripts": [
-                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-                "node_modules/@popperjs/core/dist/umd//popper.min.js",
-                "node_modules/swiper/swiper-bundle.min.js"
-
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/@popperjs/core/dist/umd//popper.min.js",
+              "node_modules/swiper/swiper-bundle.min.js"
             ]
           }
         }
