--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.12",
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.54.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.3",
     "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
