--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.3",
