--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^4.5.0",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.3",
@@ -43,6 +44,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
